# python-project-52

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  task.json
.github/workflows/: Project_CI.yml  project_CI.yml
fixtures/: label  label.json  status.json  task.JSON  user.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: db.sqlite3  settings.py  urls.py  utils.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py  0003_alter_label_options.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_description.py  0003_alter_task_author_alter_task_description_and_more.py  0004_remove_labelstotask_label_remove_task_labels_and_more.py
task_manager/templates/: base.html  index.html  label_create.html  label_delete.html  label_edit.html  labels.html  status_create.html  status_delete.html  status_edit.html  statuses.html  task_create.html  task_delete.html  task_detail.html  task_edit.html  tasks.html  user_create.html  user_delete.html  user_edit.html  user_login.html  users.html
task_manager/templates/CRUD/: create_update.html  delete.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
(+4 files in other folders)
