[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Valerii-Denisov <klerk919191@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.2.0"
django-bootstrap4 = "^22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
